PLFM-8329: Refactoring to include restriction details in the RestrictionInformationResponse